styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');

a {
    color: rgb(66, 112, 103);
}

body {
    font-family: 'Oswald', sans-serif;
    height: 100vh;
    width: 100vw;
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    padding: 0;
    margin: 0;
}

main {
    display: flex;
    flex-direction: row;
    height: 100%;
    grid-gap: 2%;
}

form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 5px;
    padding: 10px;
    border: 1px solid rgb(66, 112, 103);
    border-radius: 5px;
}

input[type="text"], input[type="email"], input[type="password"] {
    border: 1px solid grey;
    border-radius: 2px;
    font-family: 'Oswald';
}

input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
    border: 2px solid rgb(66, 112, 103);
    background-color: rgb(126, 212, 195);
    outline: none;
}

input[type="submit"] {
    font-family: 'Oswald', sans-serif;
    font-variant: small-caps;
    background-color:rgb(66, 112, 103);
    color: white;
    border: none;
    border-radius: 2px;
    padding-bottom: 4px;
    grid-column: 1 / span 2;
    margin-top: 1rem;
    cursor: pointer;
    font-size: 1.5rem;
}

input[type="submit"]:hover {
    background-color: rgb(126, 212, 195);
}

label {
    font-variant: small-caps;
}

ul {
    list-style-type: none;
    padding: 0 2rem;
}

li {
    margin-bottom: 1rem;
    text-indent: -1rem;
}


li::before {
    content: '';
    display: inline-block;
    height: 15px;
    width: 15px;
    background-image: url('../images/checked.jpg');
    background-size: contain;
  }

footer {
    text-align: center;
    font-size: 0.7rem;

    color: white;
    background: black;
    padding: 5px 0;
}

footer a {
    color: white;
}

#credits {
    border-bottom-right-radius: 5px;
    background: white;
    line-height: 2rem;
    padding: 0.5rem;
    opacity: 0.7;
    text-align: center;
    font-size: 0.6rem;
}

#form {
    width: 63%
}

#form > p > em {
    font-style: normal;
    font-weight: 700;
    color: red;
}

#login {
    font-size: 0.75rem;
    text-align: center;
}

#logo {
    background-image: url('../images/background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    width: 32%;
    align-items: center;
    justify-content: center;
}

#slogan {
    background: black;
    font-weight: 700;
    opacity: 0.7;
    padding: 1rem;
    margin-top: 25%;
}

#description { 
    color: white;
    font-weight: 100;
}

.bold {
    font-weight: 700;
    text-align: center;
}

.dark {
    color:rgb(66, 112, 103);
    font-size: 3rem;

}.light {
    color: white;
    font-size: 3rem;
}

.warning {
    padding: 5px;
    background-color: rgb(241, 194, 194);
    border: 1px solid red;
    border-radius: 5px;
    margin: 1rem auto;
    width: 80%;
    text-align: center;
    font-variant: small-caps;
    letter-spacing: 0.1rem;
}

.validation {
    font-size: 0.8rem;
    text-align: center;
    font-variant: small-caps;
    color: red;
    visibility: hidden;
}

::placeholder {
    color: grey;
}

